--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "backend-project",
   "version": "1.0.0",
   "description": "first backend project with hitesh choudhary",
-  "type":"module",
+  "type": "module",
   "main": "index.js",
-  
   "scripts": {
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
   },
   "keywords": [
     "javascript",
@@ -16,5 +15,10 @@
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^3.0.3"
+  },
+  "dependencies": {
+    "dotenv": "^16.3.2",
+    "express": "^4.18.2",
+    "mongoose": "^8.1.0"
   }
 }
